// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload-artifact-file Everything is successful Walkthrough passes in the correct arguments to axios to retrieve attachment 1`] = `
Array [
  Object {
    "method": "get",
    "responseType": "arraybuffer",
    "url": "https://example.com/image.jpg",
  },
]
`;

exports[`upload-artifact-file Everything is successful Walkthrough passes in the correct arguments to axios to upload the attachment file 1`] = `
Array [
  Object {
    "auth": Object {
      "password": "password",
      "username": "username",
    },
    "headers": undefined,
    "maxBodyLength": 52428800,
    "maxContentLength": 52428800,
    "method": "post",
    "url": "https://us-east-1-dev-edge.domain/v1/tenants/66d83870-30df-4a3b-8801-59edff162034/interactions/667802d8-2260-436c-958a-2ee0f71f73f0/artifacts/5e31c81640a22c000f5d7f28",
  },
]
`;

exports[`upload-artifact-file Everything is successful Walkthrough passes in the correct arguments to secretClient.getSecretValue() to get cx credentials 1`] = `
Array [
  Object {
    "SecretId": "us-east-1-dev-smooch-cx",
  },
]
`;

exports[`upload-artifact-file throws an error when there is a problem retrieving attachment 1`] = `"Error retrieving attachment"`;

exports[`upload-artifact-file throws an error when there is a problem retrieving cx credentials 1`] = `"Error retrieving cx credentials"`;

exports[`upload-artifact-file throws an error when there is a problem uploading artifact file 1`] = `"Error uploading file to artifact"`;
